--- a/card-picker/card-picker/Base.lproj/Main.storyboard
+++ b/card-picker/card-picker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="x2A-ne-1lx">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -8,16 +8,104 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Game Type-->
+        <scene sceneID="OBP-5y-adI">
+            <objects>
+                <viewController id="9kF-aH-D0E" customClass="ModeSelectionViewController" customModule="cardPicker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mrI-Qw-GcG">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="03e-kO-To2">
+                                <rect key="frame" x="0.0" y="88" width="428" height="804"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="2zE-RS-LKA" style="IBUITableViewCellStyleDefault" id="z7n-9S-JwK">
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="428" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="z7n-9S-JwK" id="59g-9F-By5">
+                                            <rect key="frame" x="0.0" y="0.0" width="428" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2zE-RS-LKA">
+                                                    <rect key="frame" x="20" y="0.0" width="388" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0p7-Gg-J0J"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="03e-kO-To2" firstAttribute="top" secondItem="0p7-Gg-J0J" secondAttribute="top" id="3Xg-Ng-SQe"/>
+                            <constraint firstItem="03e-kO-To2" firstAttribute="leading" secondItem="0p7-Gg-J0J" secondAttribute="leading" id="HNc-AW-mA1"/>
+                            <constraint firstItem="0p7-Gg-J0J" firstAttribute="bottom" secondItem="03e-kO-To2" secondAttribute="bottom" id="jcT-RT-Yzj"/>
+                            <constraint firstItem="0p7-Gg-J0J" firstAttribute="trailing" secondItem="03e-kO-To2" secondAttribute="trailing" id="nxG-Vl-UQn"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Game Type" id="xC0-hM-dOB">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="xkT-At-ctR"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="03e-kO-To2" id="CgS-Yy-cov"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="singlePlayer" id="98A-o4-w3e"/>
+                        <segue destination="sJZ-3y-8Rj" kind="show" identifier="multiPlayer" id="O3k-9u-eD9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2On-Lq-N2A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="197.66355140186914" y="68.682505399568043"/>
+        </scene>
+        <!--Multiplayer-->
+        <scene sceneID="EVb-XK-jGI">
+            <objects>
+                <viewController id="sJZ-3y-8Rj" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YYZ-Qe-0zc">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coming Soon..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nRM-ef-xYF">
+                                <rect key="frame" x="0.0" y="88" width="428" height="804"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" systemColor="tertiarySystemBackgroundColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="35"/>
+                                <color key="textColor" systemColor="systemIndigoColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" systemColor="labelColor"/>
+                                <size key="shadowOffset" width="0.0" height="0.0"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Gve-0J-lcX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nRM-ef-xYF" firstAttribute="leading" secondItem="Gve-0J-lcX" secondAttribute="leading" id="6An-uB-Hyw"/>
+                            <constraint firstItem="Gve-0J-lcX" firstAttribute="trailing" secondItem="nRM-ef-xYF" secondAttribute="trailing" id="EE8-SV-RpG"/>
+                            <constraint firstItem="Gve-0J-lcX" firstAttribute="bottom" secondItem="nRM-ef-xYF" secondAttribute="bottom" id="EOn-kg-y5Z"/>
+                            <constraint firstItem="nRM-ef-xYF" firstAttribute="top" secondItem="Gve-0J-lcX" secondAttribute="top" id="nIl-QR-Tex"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Multiplayer" id="jPX-TI-NBt"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tF1-BK-krl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1160" y="408"/>
+        </scene>
+        <!--Single Player-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="cardPicker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SinglePlayerViewController" customModule="cardPicker" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="uBI-yJ-m5f">
-                                <rect key="frame" x="20" y="44" width="388" height="318"/>
+                                <rect key="frame" x="20" y="88" width="388" height="318"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="noO-Go-wsc">
                                         <rect key="frame" x="0.0" y="0.0" width="388" height="72"/>
@@ -157,8 +245,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAB-uH-PTB">
-                                <rect key="frame" x="20" y="44" width="388" height="848"/>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="50"/>
+                                <rect key="frame" x="20" y="88" width="388" height="804"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="35"/>
                                 <color key="textColor" systemColor="systemPurpleColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -178,6 +266,9 @@
                             <constraint firstItem="2t5-Ib-4ZC" firstAttribute="top" relation="greaterThanOrEqual" secondItem="uBI-yJ-m5f" secondAttribute="bottom" id="oh8-Aa-7fu"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Single Player" leftItemsSupplementBackButton="YES" id="kx2-P2-Q0P">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="mzC-26-Hy3"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="flipCountLabel" destination="2t5-Ib-4ZC" id="onJ-3A-mE8"/>
                         <outlet property="gameOver" destination="tAB-uH-PTB" id="4n0-CZ-pTR"/>
@@ -197,18 +288,48 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.22429906542056" y="68.682505399568043"/>
+            <point key="canvasLocation" x="1175" y="-354"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ubj-wf-z8H">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="x2A-ne-1lx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cev-JO-OhG">
+                        <rect key="frame" x="0.0" y="44" width="428" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9kF-aH-D0E" kind="relationship" relationship="rootViewController" id="bx6-v3-ffQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S02-OI-bWB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-702.3364485981308" y="68.682505399568043"/>
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPurpleColor">
             <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tertiarySystemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
